tdf#126004: test EditShell is ok before calling ValidateAllParagraphSignatures

See https://bugs.documentfoundation.org/attachment.cgi?id=152295

Change-Id: I6a098a18ef8b119b7cdea7cbabd6d3021bf1fb6f
(cherry picked from commit 12252f27d108402df02a298bbe1b6e8f290b34d7)
Reviewed-on: https://gerrit.libreoffice.org/75523
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>