sw/source/core/doc/DocumentTimerManager.cxx
@@ -200,7 +200,8 @@ IMPL_LINK_NOARG( DocumentTimerManager, DoIdleJobs, Timer*, void )
         m_rDoc.getIDocumentFieldsAccess().UpdateRefFields();  // References
 
         // Validate and update the paragraph signatures.
-        m_rDoc.GetEditShell()->ValidateAllParagraphSignatures(true);
+        if (m_rDoc.GetEditShell())
+            m_rDoc.GetEditShell()->ValidateAllParagraphSignatures(true);
 
         pTmpRoot->EndAllAction();
 
